# Linux_File_System_Simulation

./: CMakeLists.txt  Makefile  README.md  action.ps1  data.txt  filesystem.sln  main.cpp
.github/workflows/: cmake.yml
Terminal/: Commands.hpp  Directory.hpp  File.hpp  Loader.hpp  Terminal.hpp  cygwin.ps1
filesystem/: filesystem.vcxproj  main.cpp
misc/: create_msvc.sh  create_vcxsrc.sh
misc/yosysjs/: demo03.html
vhdl_packages/vhdl_1987/src/: standard_87.vhd
vhdl_packages/vhdl_1993/src/: mixed_lang_vltype.vhd  numeric_bit.vhd  numeric_std.vhd  standard.vhd  std_1164.vhd  syn_arit.vhd  syn_misc.vhd  syn_textio.vhd  syn_unsi.vhd  textio.vhd
vhdl_packages/vhdl_2008/src/: env_2008.vhd  fixed_float_types.vhdl  fixed_generic_pkg-body.vhdl  fixed_generic_pkg.vhdl  fixed_pkg.vhdl  float_generic_pkg-body.vhdl  float_generic_pkg.vhdl  float_pkg.vhdl  math_complex-body.vhdl  math_complex.vhdl  math_real-body.vhdl  math_real.vhdl  mixed_lang_vltype.vhd  numeric_bit-body.vhdl  numeric_bit.vhdl  numeric_bit_unsigned-body.vhdl  numeric_bit_unsigned.vhdl  numeric_std-body.vhdl  numeric_std.vhdl  numeric_std_unsigned-body.vhdl  numeric_std_unsigned.vhdl  prmtvs_p.vhd  standard_2008.vhd  std_logic_1164.vhdl  textio_2008.vhd  timing_b.vhd  timing_p.vhd
vhdl_packages/vhdl_2019/src/ieee/: fixed_float_types.vhdl  fixed_generic_pkg-body.vhdl  fixed_generic_pkg.vhdl  fixed_pkg.vhdl  float_generic_pkg-body.vhdl  float_generic_pkg.vhdl  float_pkg.vhdl  ieee_bit_context.vhd  ieee_std_context.vhd  math_complex-body.vhdl  math_complex.vhdl  math_real-body.vhdl  math_real.vhdl  numeric_bit-body.vhdl  numeric_bit.vhdl  numeric_bit_unsigned-body.vhdl  numeric_bit_unsigned.vhdl  numeric_std-body.vhdl  numeric_std.vhdl  numeric_std_unsigned-body.vhdl  numeric_std_unsigned.vhdl  prmtvs_b.vhd  std_logic_1164-body.vhdl  std_logic_1164.vhdl  std_logic_textio.vhdl  syn_sign.vhd
vhdl_packages/vhdl_2019/src/std/: env.vhdl  reflection.vhdl  standard.vhdl  textio.vhdl
vhdl_packages/vhdl_2019/src/vl/: mixed_lang_vltype.vhd
